Upload image via ctrl-v, show uploaded images

--- a/templates/release.html
+++ b/templates/release.html
@@ -8,6 +8,8 @@
     <div class="container-fluid pb-3 mt-2 mb-2">
         <div class="card">
             <div class="card-body">
+                <h4 class="mb-3">v1.2 (20220704)</h4>
+                New Feature: Upload images to S3 storage via copy &amp; paste<br><br>
                 <h4 class="mb-3">v1.1 (20220701)</h4>
                 Migrate from Bootstrap 3 to Bootstrap 5<br><br>
                 <h4 class="mb-3">v1.0 (20220630)</h4>
