--- a/templates/quest_detail.html
+++ b/templates/quest_detail.html
@@ -12,7 +12,7 @@
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Click on an item to copy Markdown link to clipboard</a></li>
+                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Click on an item to copy Markdown links to clipboard</a></li>
                 <li><hr class="dropdown-divider"></li>
                 {% for item in contents %}
                     <li><a class="dropdown-item" href="#" onclick="CopyToClipboard('{{ item.Key }}');return false;">{{ item.Key }}</a></li>
