--- a/templates/storage.html
+++ b/templates/storage.html
@@ -7,14 +7,14 @@
 
     <script>
         document.onpaste = function(e){
-            var items = e.clipboardData.items;
-            var upload_progress = document.getElementById("upload_progress");
+            let items = e.clipboardData.items;
+            let upload_progress = document.getElementById("upload_progress");
             // console.log(JSON.stringify(items));
             if (e.clipboardData.items[0].kind === 'file') {
                 upload_progress.style.width = "10%";
                 upload_progress.ariaValueNow = "10";
                 // get the blob
-                var imageFile = items[0].getAsFile();
+                let imageFile = items[0].getAsFile();
                 // console.log(imageFile);
                 /*
                 var reader = new FileReader();
@@ -47,20 +47,20 @@
         }
 
         async function submitFileForm(file, type) {
-            var upload_progress = document.getElementById("upload_progress");
-            var date = new Date();
-            var formData = new FormData();
-            var myBlob = new Blob([file], { "type" : "image/png"} );
+            let upload_progress = document.getElementById("upload_progress");
+            let date = new Date();
+            let formData = new FormData();
+            let myBlob = new Blob([file], {"type": "image/png"});
             formData.append('file', myBlob, 'upload_' + ISODateString(date)+ '.png');
             formData.append('csrf_token', '{{ csrf_token() }}')
             formData.append('submission-type', type);
             upload_progress.style.width = "20%";
             upload_progress.ariaValueNow = "20";
 
-            var xhr = new XMLHttpRequest();
+            let xhr = new XMLHttpRequest();
             xhr.open('POST', '{{ url_for('show_storage') }}');
             xhr.onload = function () {
-                if (xhr.status == 200) {
+                if (xhr.status === 200) {
                     console.log('all done: ');
                 } else {
                     console.log('Nope');
@@ -86,7 +86,7 @@
                 You can paste and upload an image in the clipboard just by pressing ctrl+v on this page.
             </div>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" name="upload_progress" id="upload_progress" style="width: 1%" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" id="upload_progress" style="width: 1%" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
         <ul class="list-group">
             {% for item in contents %}
                 <li class="list-group-item">
-                    <a href="{{ url_for('show_image', creatorname='.', filename=item.Key) }}"><i class="bi bi-eye"></i></a> - <a href="{{ url_for('do_download', creatorname='.', filename=item.Key) }}"><i class="bi bi-download"></i></a> - <a href="{{ url_for('do_delete', creatorname='.', filename=item.Key) }}"><i class="bi bi-trash"></i></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}-html');return false;"><i class="bi bi-link"></i></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}-md');return false;"><i class="bi bi-markdown"></i></a> {{ item.Key }}
+                    <a href="{{ url_for('show_image', creator_name='.', filename=item.Key) }}"><i class="bi bi-eye"></i></a> - <a href="{{ url_for('do_download', creator_name='.', filename=item.Key) }}"><i class="bi bi-download"></i></a> - <a href="{{ url_for('do_delete', creator_name='.', filename=item.Key) }}"><i class="bi bi-trash"></i></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}-html');return false;"><i class="bi bi-link"></i></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}-md');return false;"><i class="bi bi-markdown"></i></a> {{ item.Key }}
                 </li>
             {% endfor %}
         </ul>
