--- a/templates/world.html
+++ b/templates/world.html
@@ -11,7 +11,7 @@
         {% else %}
             <div class="list-group">
                 {% for world in worlds %}
-                    <a href="{{ url_for('show_world', world_id=world.world_id)}}" class="list-group-item">{{ world.world_name }}{% if world.visible == 1 %} <i class="bi bi-globe"></i>{% endif %}</a>
+                    <a href="{{ url_for('show_world', world_id=world.world_id)}}" class="list-group-item">{{ world.world_name }} {% if world.reduced == 0 %} <i class="bi bi-chevron-bar-left"></i>{% endif %} {% if world.visible == 1 %} <i class="bi bi-globe"></i>{% endif %}</a>
                 {% endfor %}
             </div>
         {% endif %}
