--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,7 @@
                             <a class="link-dark" href="{{ prefix }}/static/doc/index.html">Read Docs</a>,
                             <a class="link-dark" href="{{ prefix }}/swagger">Show API</a>
                             <br>
+                            <a class="link-dark" href="{{ url_for('show_contact')}}">Send Message</a>,
                             <a class="link-dark" href="{{ url_for('show_release')}}">Version: {{ version }}</a>
                         </h6>
                     </div>
