Add captcha for contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,6 +29,14 @@
             {% for error in form.message.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
+            <div class="form-group mt-2 mb-2">
+                <label for="captcha">{{ form.captcha.label }} (What is {{ random1  }} + {{ random2 }} ?)</label>
+                {{ form.captcha(size=20, class="form-control") }}
+            </div>
+            {{ form.check_captcha }}
+            {% for error in form.captcha.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <button type="submit" class="btn btn-primary mt-4 mb-4">Send Message</button>
         </form>
     </div>
