Add captcha for contact form

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="container-fluid pb-3 mt-2 mb-2">
-        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a class="link-primary" href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
+        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor and report generator inspired by <a class="link-primary" href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
         Makes creating solutions and reports easy and fun 😀<br>
     </div>
 
@@ -52,6 +52,7 @@
 
     <div class="container-fluid pb-3 mt-2 mb-2">
         Based on <a class="link-primary" href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a class="link-primary" href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a class="link-primary" href="https://contabo.com/en/">Contabo</a> servers.<br>
-        If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.
+        If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.<br>
+        You may also send me a <a href="{{ url_for('show_contact')}}">message</a> here.
     </div>
 {% endblock %}
