--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -74,7 +74,7 @@
             </form>
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Solution</button>
+                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i> Delete Solution</button>
             {% endif %}
         </div>
     </div>
