--- a/templates/world.html
+++ b/templates/world.html
@@ -68,7 +68,7 @@
 
         {% if current_user.creator_role == "creator" %}
             <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">Create World</button>
+            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i> Create World</button>
             <br><br>
         {% endif %}
     </div>
