--- a/templates/objective.html
+++ b/templates/objective.html
@@ -104,7 +104,7 @@
 
         {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
             <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">Create Objective</button>
+            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i> Create Objective</button>
             <br><br>
         {% endif %}
     </div>
