--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -136,21 +136,33 @@
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal">Edit Objective</button>
+                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i> Edit Objective</button>
 
                 <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Edit Quest</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-question-square"></i> Edit Quest</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Edit My Solution</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-exclamation-square"></i> Edit My Solution</button>
+                </form>
+            {% endif %}
+
+            {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
+                <form action="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='markdown') }}">
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-md"></i> Create Report (Markdown)</button>
+                </form>
+            {% endif %}
+
+            {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
+                <form action="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='pdf') }}">
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-html"></i> Create Report (HTML)</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Objective</button>
+                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i> Delete Objective</button>
             {% endif %}
         </div>
 
