--- a/templates/room.html
+++ b/templates/room.html
@@ -61,7 +61,7 @@
 
         {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
             <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">Create Room</button>
+            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i> Create Room</button>
         {% endif %}
     </div>
 {% endblock %}
