--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -98,36 +98,36 @@
             </a>
 
             <form action="{{ url_for('show_selected_world', world_id=world.world_id) }}">
-                <button type="submit" class="btn btn-info mt-4 mb-4 btn-space">Select World</button>
+                <button type="submit" class="btn btn-info mt-4 mb-4 btn-space"><i class="bi bi-check2"></i> Select World</button>
             </form>
 
             {% if current_user.creator_id == world.creator_id %}
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal">Edit World</button>
+                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i> Edit World</button>
 
                 <form action="{{ url_for('show_switched_world', world_id=world.world_id) }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Switch Visibility</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-globe"></i> Switch Visibility</button>
                 </form>
 
                 <form action="{{ url_for('show_reduced_world', world_id=world.world_id) }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Kringle Mode</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-chevron-bar-left"></i> Kringle Mode</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_report', world_id=world.world_id, format_type='markdown') }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Create Report (Markdown)</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-md"></i> Create Report (Markdown)</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_report', world_id=world.world_id, format_type='pdf') }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Create Report (HTML)</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-html"></i> Create Report (HTML)</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_id == world.creator_id %}
-                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-toggle="modal" data-target="#myModal_del">Delete World</button>
+                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-toggle="modal" data-target="#myModal_del"><i class="bi bi-trash"></i> Delete World</button>
             {% endif %}
         </div>
     </div>
