Add world archive

--- a/templates/release.html
+++ b/templates/release.html
@@ -9,7 +9,8 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="mb-3">v1.3 (20220705)</h4>
-                New Feature: Distinction between Kringle and non-Kringle themes<br><br>
+                New Feature: Distinction between Kringle and non-Kringle themes<br>
+                New Feature: World Archive<br><br>
                 <h4 class="mb-3">v1.2 (20220704)</h4>
                 New Feature: Upload images to S3 storage via copy &amp; paste<br><br>
                 <h4 class="mb-3">v1.1 (20220701)</h4>
