--- a/templates/world.html
+++ b/templates/world.html
@@ -6,15 +6,33 @@
     </div>
 
     <div class="container-fluid pb-3 mt-2 mb-2">
-        {% if worlds.count() == 0 %}
+        <h4 class="mb-3">Active Worlds</h4>
+        {% if worlds_active.count() == 0 %}
             No entries found.<br>
         {% else %}
             <div class="list-group">
-                {% for world in worlds %}
+                {% for world in worlds_active %}
                     <a href="{{ url_for('show_world', world_id=world.world_id)}}" class="list-group-item">{{ world.world_name }} {% if world.reduced == 0 %} <i class="bi bi-chevron-bar-left"></i>{% endif %} {% if world.visible == 1 %} <i class="bi bi-globe"></i>{% endif %}</a>
                 {% endfor %}
             </div>
         {% endif %}
+
+        <hr class="little mt-4 mb-4">
+
+        <h4 class="mb-3">Archived Worlds</h4>
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                World Archive
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Click on an item to open world</a></li>
+                <li><hr class="dropdown-divider"></li>
+                {% for world in worlds_archived %}
+                    <li><a class="dropdown-item" href="{{ url_for('show_world', world_id=world.world_id)}}">{{ world.world_name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
 
         <!-- Modal -->
         <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
