--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -54,26 +54,21 @@
                         <form action="{{ url_for('show_item_p', item_id=item.item_id) }}" method="POST">
                             {{ form.csrf_token }}
                             <div class="form-group mt-2 mb-2">
-                                <label for="name">{{ form.name.label }}</label>
+                                <label for="{{ form.name.name }}">{{ form.name.label }}</label>
                                 {{ form.name(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.name.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="description">{{ form.description.label }}</label>
+                                <label for="{{ form.description.name }}">{{ form.description.label }}</label>
                                 {{ form.description(size=40, class="form-control") }}
                             </div>
-                            {% for error in form.description.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="image">{{ form.image.label }}</label>
+                                <label for="{{ form.image.name }}">{{ form.image.label }}</label>
                                 {{ form.image(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.image.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
+                            <div class="form-group mt-2 mb-2">
+                                <label for="{{ form.room.name }}">{{ form.room.label }}</label>
+                                {{ form.room(class="form-select") }}
+                            </div>
                             <button type="submit" class="btn btn-primary mt-4 mb-4">Update</button>
                         </form>
                     </div>
