--- a/templates/objective.html
+++ b/templates/objective.html
@@ -29,68 +29,40 @@
                          <form action="{{ url_for('show_objectives_p', world_id=world.world_id) }}" method="POST">
                             {{ form.csrf_token }}
                             <div class="form-group mt-2 mb-2">
-                                <label for="name">{{ form.name.label }}</label>
+                                <label for="{{ form.name.name }}">{{ form.name.label }}</label>
                                 {{ form.name(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.name.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="title">{{ form.title.label }}</label>
+                                <label for="{{ form.title.name }}">{{ form.title.label }}</label>
                                 {{ form.title(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.title.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="difficulty">{{ form.difficulty.label }}</label>
-                                {{ form.difficulty(size=1, class="form-control") }}
+                                <label for="{{ form.difficulty.name }}">{{ form.difficulty.label }}</label>
+                                {{ form.difficulty(class="form-select") }}
                             </div>
-                            {% for error in form.difficulty.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="url">{{ form.url.label }}</label>
+                                <label for="{{ form.url.name }}">{{ form.url.label }}</label>
                                 {{ form.url(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.url.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="supported">{{ form.supported.label }}</label>
-                                {{ form.supported(size=40, class="form-control") }}
+                                <label for="{{ form.supported.name }}">{{ form.supported.label }}</label>
+                                {{ form.supported(class="form-select") }}
                             </div>
-                            {% for error in form.supported.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="requires">{{ form.requires.label }}</label>
-                                {{ form.requires(size=40, class="form-control") }}
+                                <label for="{{ form.requires.name }}">{{ form.requires.label }}</label>
+                                {{ form.requires(class="form-select") }}
                             </div>
-                            {% for error in form.requires.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="description">{{ form.description.label }}</label>
+                                <label for="{{ form.description.name }}">{{ form.description.label }}</label>
                                 {{ form.description(size=40, class="form-control") }}
                             </div>
-                            {% for error in form.description.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="image">{{ form.image.label }}</label>
+                                <label for="{{ form.image.name }}">{{ form.image.label }}</label>
                                 {{ form.image(size=20, class="form-control") }}
                             </div>
-                            {% for error in form.image.errors %}
-                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                            {% endfor %}
                             <div class="form-group mt-2 mb-2">
-                                <label for="room">Select room</label>
-                                <select class="form-select" id="room" name="room" aria-label="Room">
-                                    {% for room in rooms %}
-                                        <option value="{{ room.room_id }}">{{ room.room_name }}</option>
-                                    {% endfor %}
-                                </select>
+                                <label for="{{ form.room.name }}">{{ form.room.label }}</label>
+                                {{ form.room(class="form-select") }}
                             </div>
                             <button type="submit" class="btn btn-primary mt-4 mb-4">Create</button>
                         </form>
