--- a/templates/item.html
+++ b/templates/item.html
@@ -23,7 +23,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Create Item</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_items_p', world_id=world.world_id) }}" method="POST">
