--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -28,7 +28,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Delete World</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_deleted_world', world_id=world.world_id) }}">
