--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -109,41 +109,46 @@
             </div>
         </div>
 
-        <div class="btn-toolbar" role="toolbar" aria-label="Objective Actions">
-            <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}" class="btn btn-primary mt-4 mb-4 btn-space">
-                <i class="bi bi-list-ul"></i> All Objectives
-            </a>
-
-            {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i> Edit Objective</button>
-
-                <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-question-square"></i> Edit Quest</button>
-                </form>
-            {% endif %}
-
-            {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-                <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-exclamation-square"></i> Edit My Solution</button>
-                </form>
-            {% endif %}
-
-            {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-                <form action="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='markdown') }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-md"></i> Create Report (Markdown)</button>
-                </form>
-            {% endif %}
-
-            {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-                <form action="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='pdf') }}">
-                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space"><i class="bi bi-filetype-html"></i> Create Report (HTML)</button>
-                </form>
-            {% endif %}
-
-            {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i> Delete Objective</button>
-            {% endif %}
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group me-2" role="group" aria-label="Button group with nested dropdown">
+                <div class="btn-group" role="group">
+                    <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle mt-4 mb-4" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-activity"></i> Actions
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                        <li><a class="dropdown-item" href="{{ url_for('show_objectives', world_id=objective.world_id) }}">All Objectives</a></li>
+                        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Edit Objective</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('show_quest', objective_id=objective.objective_id)}}">Edit Quest</a></li>
+                        {% endif %}
+                        {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
+                            <li><a class="dropdown-item" href="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">Edit My Solution</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='markdown') }}">Create Report (Markdown)</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='pdf') }}">Create Report (HTML)</a></li>
+                        {% endif %}
+                        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Objective</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+            <div class="btn-group me-2" role="group" aria-label="Second group">
+                <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-list-ul"></i></a>
+                {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                    <a href="#" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i></a>
+                    <a href="{{ url_for('show_quest', objective_id=objective.objective_id)}}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-question-square"></i></a>
+                {% endif %}
+                {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
+                    <a href="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-exclamation-square"></i></a>
+                    <a href="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='markdown') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-md"></i></a>
+                    <a href="{{ url_for('show_report_single', objective_id=objective.objective_id, format_type='pdf') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-html"></i></a>
+                {% endif %}
+            </div>
+            <div class="btn-group me-2" role="group" aria-label="Third group">
+                {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                    <a href="#" class="btn btn-danger mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i></a>
+                {% endif %}
+            </div>
         </div>
 
         <hr class="little mt-4 mb-4">
